fix z-index

--- a/styles/header.css
+++ b/styles/header.css
@@ -14,7 +14,7 @@ header {
   align-items: center;
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 999;
 }
 
 .logo {
